--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "fcc-api-projects-boilerplate",
+	"name": "fcc-project-timestamp",
 	"version": "0.0.1",
 	"description": "An FCC Backend Challenge",
 	"main": "server.js",
@@ -7,8 +7,9 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
+		"cors": "^2.8.0",
 		"express": "^4.12.4",
-		"cors": "^2.8.0"
+		"nodemon": "^2.0.2"
 	},
 	"engines": {
 		"node": "4.4.5"
